feat(system): 实现图片上传和3D重建模块的定期清理功能
- 新增定时任务清理存储中的孤立文件和数据库中的无效记录
- 优化图片上传和管理相关代码，提高系统稳定性和数据一致性
- 更新设计文档和时序图，反映新的清理机制